fixed column spacing

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -44,11 +44,9 @@ hr.style-two {
     Padding: 15px;
     background-color:rgba(255, 255, 255, 0.64);
     filter: alpha(opacity=60);
-    margin-left: 5%;
-    Margin-right: 5%;
+    margin-right: 5%;
     margin-top: 10px;
-    margin-top: 10px;
-    width: 40%;
+    width: 42%;
   }
   .boxleft{
     box-sizing: border-box;
@@ -56,11 +54,9 @@ hr.style-two {
     Padding: 15px;
     background-color:rgba(255, 255, 255, 0.64);
     filter: alpha(opacity=60);
-    margin-left: 5%;
-    Margin-right: 5%;
+    Margin-left: 5%;
     margin-top: 10px;
-    margin-top: 10px;
-    width: 40%;
+    width: 42%;
     
   }
   div.child {
